webapp/src/stylesheets/main.css
:root {
  --ma-couleur: #119DB8;
  --ma-couleur-opacité: #119cb8c7;
  --ma-couleur-foncée: #1489a0;
  --accent-color: #E6C060;
  --accent-color-dark: #CFAD57;
  --spacing-color: #eef7f9;
}

/* Scroll bar */

/* Largeur de la barre de défilement */
::-webkit-scrollbar {
  width: 15px;
}

/* Couleur de fond de la barre de défilement */
::-webkit-scrollbar-track {
  background: #ffffff;
  border: 2px solid var(--ma-couleur);
  border-radius: 10px;
}

/* Couleur de la poignée de défilement */
::-webkit-scrollbar-thumb {
  background: var(--ma-couleur);
  border-radius: 10px;
  width: 5px !important;
  transition: 0.2s ease-in-out;
}

/* Ombre sur la poignée de défilement au survol */
::-webkit-scrollbar-thumb:hover {
  background: var(--ma-couleur-foncée);
}

.fa-solid, .fa {
  color: var(--accent-color);
}

/* await */

.await {
  height: 700px;

i {
  font-size: 35px;
  padding: 0px 7px;
  color: var(--ma-couleur);

}

i:nth-child(1) {
  animation: loading 0.9s infinite linear;
}

i:nth-child(2) {
  animation: loading 0.9s infinite -0.3s linear;
}

i:nth-child(3) {
  animation: loading 0.9s infinite -0.6s linear;

}

}

@keyframes loading {
  0% {
    transform: translateY(0px);
  }

  50% {
    transform: translateY(-30px);
  }

  100% {
    transform: translateY(0px);
  }
}

/* temp */

.container-fluid {
  width: 95%;
  height: 95%;
  border: 2px solid var(--ma-couleur-opacité);
  border-radius: 10px;
  background: white;
}

.container-fluid2 {
  width: 97%;
  height: 95%;
  border: 3px solid var(--ma-couleur);
  border-radius: 10px;

}

.temp {
  text-align: center;
  margin-top: 10%;

h1 {
  color: var(--ma-couleur);
}

p {
  cursor: pointer;
  background: var(--ma-couleur);
  color: white;
  padding: 10px 25px;
  border-radius: 10px;
}

}

/* bootstrap settings */

.btn-primary {
  background: var(--ma-couleur);
  border: 2px solid var(--ma-couleur);
}

.btn-primary:hover {
  background: var(--ma-couleur-foncée);
  border: 2px solid var(--ma-couleur);
}

.btn-outline-primary {
  border: 2px solid var(--ma-couleur);
  color: var(--ma-couleur);
}

.btn-outline-primary:hover {
  background: var(--ma-couleur);
  border: 2px solid var(--ma-couleur);
}


.form-control {
  transition: 0.2s ease-in-out;
}

.form-control:focus {
  box-shadow: 0px 0px 0px 3px transparent;
  border: 2px solid var(--ma-couleur);
  transform: translateX(5px);
}

.form-check-input:focus {
  box-shadow: 0px 0px 0px 3px transparent;
  border: 2px solid var(--ma-couleur);
}

.form-check-label {
  color: var(--ma-couleur);
}

#error-message {
  color: red;
  font-size: 15px;
  display: none;
  text-align: center;
}


/* navbar */

.nav-btn {
  margin-top: 25px;
  width: 160px;
  height: 90px;
  border: 3px solid var(--ma-couleur);
  border-radius: 20px;
  cursor: pointer;
  margin-left: 20px;
  margin-right: 20px;
  transition: 0.2s ease-in-out;
  text-align: center;

p {
  color: var(--ma-couleur);
  font-size: 22px;
  margin-top: 11px;
}

}

.nav-btn:hover {
  transform: translateY(-5px);
}

.nav-logout {
  margin-top: 25px;
  width: 50px;
  height: 50px;
  border-radius: 10px;
  border: 3px solid var(--ma-couleur);
  /*color: var(--ma-couleur);*/
  cursor: pointer;
  color: white;
  background: var(--ma-couleur);
  margin-left: 15px;
  transition: 0.2s ease-in-out;

p {
  margin-top: 15px;
}

}

.nav-logout:hover {
  transform: translateX(5px);
}

/* userList */

.user-info-box {
  width: 75%;
  background: var(--ma-couleur);
  border-radius: 10px;

p {
  color: white;
  font-size: 22px;
  padding: 0px 5px;
}

}

/* dashboard */

.dash {
  width: 100%;
  max-width: 1500px;
}

.dash-left {
  width: 20%;

.dash-year {
  width: 100%;
  height: 100px;
  background: var(--ma-couleur);
  border-radius: 10px;

i {
  color: white;
  font-size: 30px;
}

p {
  color: white;
  font-size: 25px;
}

}

.dash-info {
  width: 100%;
  min-height: 650px;
  background: var(--ma-couleur);
  border-radius: 10px;

i {
  color: white;
  font-size: 35px;
  margin-top: -100px;
}

h1 {
  font-size: 30px;
  color: white;
}

p {
  color: rgba(255, 255, 255, 0.938);
  font-size: 17px;
}

span {
  cursor: pointer;
  color: rgba(255, 255, 255, 0.753);
  transition: 0.1s ease-in-out;
  font-size: 15px;
}

span:hover {
  color: white;

}

}
}
/* ... */

